src/test/deca/syntax/invalid/synt/log/ident.loglex
INT: [@0,0:1='12',<44>,1:0]
IDENT: [@1,2:9='pasident',<43>,1:2]
